<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Survey</string>
    <string name="action_settings">Settings</string>
    <string name="app_version">Version %1$s</string>

    <string name="lost_internet_connection_message">Oops, please check your internet connection</string>
    <string name="survey_error_unfortunately">Unfortunately the process has stopped, please try again</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_info_interview">Information Interview</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_full_name">Họ và tên</string>
    <string name="prompt_number_id">Số CMND</string>
    <string name="prompt_phone_number">Số điện thoại</string>
    <string name="prompt_address">Địa chỉ</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_sub_item_bottom">Cá nhân</string>

    <string name="nav_item_project_list">Danh sách dự án</string>
    <string name="nav_item_logout">Đăng xuất</string>

    <string name="button_next_question">Câu sau</string>
    <string name="button_save_survey">Tạm lưu</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Hủy bỏ</string>
    <string name="button_exit">Thoát</string>
    <string name="button_setting">Cài đặt</string>
    <string name="button_checking">Kiểm tra</string>
    <string name="title_attention">Chú ý</string>
    <string name="title_notice">Thông báo</string>
    <string name="title_confirm">Xác nhận</string>
    <string name="title_user_info_dialog">Thông tin đáp viên</string>

    <string name="txt_over_max_answer">Câu hỏi hiện tại bạn chỉ có thể chọn nhiều nhất %d phương án trả lời.</string>
    <string name="txt_emty_answer">Bạn chưa chọn phương án cho câu trả lời này.</string>
    <string name="txt_emty_other_option">Vui lòng ghi rõ thông tin.</string>
    <string name="txt_ma_logic">Bạn chưa check đủ %1$d câu cần thiết.</string>
    <string name="txt_exclusion">Đã chọn một trong các yếu tố %s thì không được chọn các yếu tố khác.</string>
    <string name="txt_not_suitable_option">Cám ơn bạn đã tham gia khảo sát. Tuy nhiên bạn không thuộc đối tượng khảo sát. Xin mời bạn tham gia dự án khác.</string>
    <string name="txt_completed_survey_mark">Chúc mừng bạn đã hoàn thành xong khảo sát. Bạn đã được cộng %s vào tài khoản. Mời bạn đến thăm hồ sơ thành viên của mình để xem tổng điểm.</string>
    <string name="txt_completed_survey">Cảm ơn bạn đã hoàn thành dự án. Bạn sẽ được tham gia bốc thăm trúng thưởng trong thời gian tới. Mã số bốc thăm của bạn sẽ được thông báo sau khi dự án kết thúc.</string>
    <string name="txt_save_project_message">Bạn có muốn rời dự án đang thực hiện không ?</string>

    <string name="message_can_not_get_project_list">Không lấy được danh sách dự án.\nVui lòng kiểm tra kết nối Internet và thử lại.\nỨng dụng sẽ thoát sau khi nhấn OK</string>
    <string name="message_can_not_get_questionnaire_list">Không lấy được danh sách câu hỏi cho dự án này.\nVui lòng kiểm tra kết nối Internet và thử lại.\nỨng dụng sẽ thoát sau khi nhấn OK</string>
    <string name="message_can_not_get_route_list">Không lấy được danh sách đường đi câu hỏi cho dự án này.\nVui lòng kiểm tra kết nối Internet và thử lại.\nỨng dụng sẽ thoát sau khi nhấn OK</string>
    <string name="message_download_compeleted">Đã tải xuống hoàn tấc dự án \"%s\"</string>
    <string name="message_upload_compeleted">Đã tải lên hoàn tấc %1$d kết quả</string>
    <string name="message_project_not_ready">Dự án chưa sẵn sàng.\nHãy tải xuống dự án trước khi bắt đầu làm khảo sát.</string>
    <string name="message_request_gps">Dự án này yêu cầu bật GPS và lưu địa chỉ khảo sát!\nỨng dụng sẽ kiểm tra GPS của thiết bị khi bạn nhấn vào nút Kiểm tra.\n\nChú ý: Dự án sẽ hiển thị nếu thiết bi đã bật GPS, nếu chưa sẽ chuyến đến trang cài đặt GPS cho bạn.</string>
    <string name="message_open_location_setting">Thiết bị chưa bật GPS!\n Hãy nhấn vào cài đặt để bật GPS.</string>
    <string name="message_error_warning">GPS bị tắt trên thiết bị của bạn.</string>
    <string name="message_not_detected_gps_error_warning">Vị trí hiện tại của bạn không lấy được tọa độ GPS.\nHãy di chuyển đến một nơi khác</string>
    <string name="message_no_permissions">The recorder requires `RECORD_AUDIO` and `WRITE_EXTERNAL_STORAGE` permissions.</string>
    <string name="message_error_audio_recorder">Audio recorder error: %1$s</string>

    <string name="message_fullname_empty">Họ và tên không hợp lệ</string>
    <string name="message_address_empty">Địa chỉ không hợp lệ</string>
    <string name="message_email_empty">Email không hợp lệ</string>

    <string name="menu_item_download">Tải xuống dự án</string>
    <string name="menu_item_update">Cập nhật dữ liệu</string>
    <string name="menu_item_upload">Upload dữ liệu</string>

    <string name="audio_db_title_format"><xliff:g id="format">yyyy-MM-dd HH:mm:ss</xliff:g></string>
    <string name="audio_db_artist_name">Your recordings</string>
    <string name="audio_db_album_name">Audio recordings</string>
</resources>
