<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_user_info_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/padding_dialog_medium_1">
        <!--full name-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dialog_user_info_full_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_full_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <!--CMND-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dialog_user_info_number_id_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_number_id"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <!--phone number-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dialog_user_info_phone_number_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_full_name"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <!--address-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dialog_user_info_address_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_address"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <!--email-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/dialog_user_info_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_full_name"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            android:orientation="horizontal"
            android:padding="@dimen/padding_dialog_medium_1">

            <Button
                android:id="@+id/dialog_user_info_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel" />

            <Button
                android:id="@+id/dialog_user_info_ok_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_dialog_medium_1"
                android:text="@string/button_ok" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>